--- a/src/app/posts/list-post/list-post.component.html
+++ b/src/app/posts/list-post/list-post.component.html
@@ -1,3 +1,4 @@
+<h1 class="mat-h1 mat-heading-1">Our Posts</h1>
 <mat-accordion multi="true" *ngIf="posts.length > 0;else noPosts">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
@@ -5,7 +6,7 @@
     </mat-expansion-panel-header>
     <p>{{post.content}}</p>
     <mat-action-row>
-      <button mat-button color="primary">EDIT</button>
+      <button mat-button color="primary" [routerLink]="['/edit', post.id]" routerLinkActive="router-link-active" >EDIT</button>
       <button mat-button color="warn" (click)="this.onDelete(post.id)">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
