--- a/src/app/posts/list-post/list-post.component.html
+++ b/src/app/posts/list-post/list-post.component.html
@@ -1,5 +1,6 @@
 <h1 class="mat-h1 mat-heading-1">Our Posts</h1>
-<mat-accordion multi="true" *ngIf="posts.length > 0;else noPosts">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading;">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{post.title}}
@@ -11,7 +12,5 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<ng-template #noPosts>
-  <h4 class="mat-h4 mat-subheading-1 info-text">No posts added yet!</h4>
-</ng-template>
+
 
