--- a/src/app/posts/create-post/create-post.component.css
+++ b/src/app/posts/create-post/create-post.component.css
@@ -7,3 +7,11 @@ input[type=file] {
 #filePickerSection{
   margin: 1rem 0;
 }
+
+#image-preview img{
+  display: block;
+  max-width: 600px;
+  max-height: 400px;
+  margin: 1rem auto;
+}
+
