--- a/src/app/posts/create-post/create-post.component.html
+++ b/src/app/posts/create-post/create-post.component.html
@@ -13,6 +13,9 @@
       <button mat-raised-button color="accent" type="button" (click)="filePicker.click()" >Pick Image</button>
       <input type="file" #filePicker (change)="onImageChange($event)">
     </div>
+    <div id="image-preview" *ngIf="imagePreview != '' && imagePreview != null">
+      <img [src]="imagePreview">
+    </div>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
   </form>
 </mat-card>
