--- a/src/app/posts/create-post/create-post.component.html
+++ b/src/app/posts/create-post/create-post.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
     <div id="filePickerSection">
       <button mat-raised-button color="accent" type="button" (click)="filePicker.click()" >Pick Image</button>
-      <input type="file" #filePicker (change)="onImageChange($event)">
+      <input type="file" #filePicker (change)="onImageChange($event)" accept="jpg, jpeg, png">
     </div>
     <div id="image-preview" *ngIf="imagePreview != '' && imagePreview != null">
       <img [src]="imagePreview">
