--- a/src/app/posts/create-post/create-post.component.css
+++ b/src/app/posts/create-post/create-post.component.css
@@ -8,7 +8,7 @@ input[type=file] {
   margin: 1rem 0;
 }
 
-#image-preview img{
+.image-preview img{
   display: block;
   max-width: 600px;
   max-height: 400px;
