--- a/src/app/posts/create-post/create-post.component.html
+++ b/src/app/posts/create-post/create-post.component.html
@@ -13,8 +13,11 @@
       <button mat-raised-button color="accent" type="button" (click)="filePicker.click()" >Pick Image</button>
       <input type="file" #filePicker (change)="onImageChange($event)" accept="jpg, jpeg, png">
     </div>
-    <div id="image-preview" *ngIf="imagePreview != '' && imagePreview != null">
+    <div class="image-preview" *ngIf="imagePreview != '' && imagePreview != null">
       <img [src]="imagePreview">
+    </div>
+    <div class="image-preview" *ngIf="mode === 'edit'">
+      <img [src]="post.imagePath">
     </div>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
   </form>
