--- a/src/app/posts/list-post/list-post.component.html
+++ b/src/app/posts/list-post/list-post.component.html
@@ -15,5 +15,6 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator [length]='totalPosts' [pageSize]="postPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
 
 
