added angular structure for signup and login

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,5 +4,7 @@
     <span class="navigation-spacer"></span>
     <mat-icon class="navigation-icon" aria-hidden="false" [routerLink]="['/']" routerLinkActive="router-link-active" >list</mat-icon>
     <mat-icon class="navigation-icon" aria-hidden="false" [routerLink]="['/create']" routerLinkActive="router-link-active" >add</mat-icon>
+    <mat-icon class="navigation-icon" aria-hidden="false" [routerLink]="['/login']" routerLinkActive="router-link-active" >account_circle</mat-icon>
+    <mat-icon class="navigation-icon" aria-hidden="false" [routerLink]="['/signup']" routerLinkActive="router-link-active" >account_box</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
